[gd_scene load_steps=3 format=3 uid="uid://hi00qr1hxq1e"]

[ext_resource type="Script" path="res://Script/MainMenu.gd" id="1_8bq6d"]
[ext_resource type="Script" path="res://Script/Menu.gd" id="1_pia8p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8bq6d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuMain" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_pia8p")

[node name="StartGame" type="MenuButton" parent="MenuMain"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start Configurator"

[node name="LoadGame" type="MenuButton" parent="MenuMain"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Load Configuration"

[node name="Settings" type="MenuButton" parent="MenuMain"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Exit" type="MenuButton" parent="MenuMain"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="MenuSettings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AudioSFX" type="MenuButton" parent="MenuSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SFX"

[node name="AudioBGM" type="MenuButton" parent="MenuSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "BGM"

[node name="Settings" type="MenuButton" parent="MenuSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Setting WIP"

[node name="Exit" type="MenuButton" parent="MenuSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Menu"
